--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -13,11 +13,20 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="addlanding">
+            <NavLink class="nav-link" href="addLanding">
                 <span class="oi oi-plus" aria-hidden="true"></span> Добавить в очередь
             </NavLink>
         </li>
-
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="editCoils">
+                <span class="oi oi-reload" aria-hidden="true"></span> Сброс бунта
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="viewCoils">
+                <span class="oi oi-dashboard" aria-hidden="true"></span> Список бунтов 
+            </NavLink>
+        </li>
     </ul>
 </div>
 
