--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -24,7 +24,7 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="viewCoils">
-                <span class="oi oi-dashboard" aria-hidden="true"></span> Список бунтов 
+                <span class="oi oi-spreadsheet" aria-hidden="true"></span> Список бунтов 
             </NavLink>
         </li>
     </ul>
