Final result with redirection on external reports page

--- a/Pages/EditCoils.razor
+++ b/Pages/EditCoils.razor
@@ -10,7 +10,8 @@
                 <table>
                     <tr>
                         <th scope="col" style="vertical-align: middle; width: 100px;">Плавка<br/>№</th>
-                        <th scope="col" style="vertical-align: middle; width: 100px;">Диаметр</th>
+                        <th scope="col" style="vertical-align: middle; width: 100px;">Профиль</th>
+                        <th scope="col" style="vertical-align: middle; width: 100px;">Диаметр<br />профиля</th>
                         <th scope="col" style="vertical-align: middle; width: 100px;">№<br/>бунта</th>
                         <th scope="col" style="vertical-align: middle; width: 155px;">Вес<br/>бунта</th>
                         <th scope="col" style="vertical-align: middle; width: 250px;">Дата<br/>взвешивания</th>
@@ -29,6 +30,7 @@
                         {
                             <tr>
                                 <td style="width: 100px;">@item.MeltNumber</td>
+                                <td style="width: 100px;">@item.ProductionProfile</td>
                                 <td style="width: 100px;">@item.Diameter</td>
                                 <td style="width: 100px;">@item.CoilNumber</td>
                                 <td style="width: 155px;">@item.WeightFact</td>
