--- a/Pages/AddLanding.razor
+++ b/Pages/AddLanding.razor
@@ -69,6 +69,13 @@
     </div>
     <div class="form-row">
         <div class="form-group col-md-1">
+            <label for="productProfile">Профиль</label>
+            <InputSelect id="productProfile" class="form-control" @bind-Value="@_landingData.ProductProfile">
+                <option value="№">№</option>
+                <option value="Ø">Ø</option>
+            </InputSelect>
+        </div>
+        <div class="form-group col-md-1">
             <label for="diameter">Диаметр</label>
             <InputNumber id="diameter" class="form-control" placeholder="диаметр" @bind-Value="@_landingData.Diameter"/>
         </div>
@@ -77,8 +84,8 @@
             <InputText id="shift" class="form-control" placeholder="бригада" @bind-Value="@_landingData.Shift"/>
         </div>
         <div class="form-group col-md-1">
-            <label for="class">Класс</label>
-            <InputSelect id="gost" class="form-control" @bind-Value="@_landingData.IngotClass">
+            <label for="classForm">Класс</label>
+            <InputSelect id="classForm" class="form-control" @bind-Value="@_landingData.IngotClass">
                 @foreach (string item in _classes)
                 {
                     <option value="@item">@item</option>
