--- a/Pages/EditLandingData.razor
+++ b/Pages/EditLandingData.razor
@@ -12,7 +12,7 @@
         </div>
         <div class="form-group col-md-1">
             <label for="ingotsCount">Кол-во заготовок</label>
-            <InputNumber id="ingotsCount" class="form-control" placeholder="количество заготовок" @bind-Value="@_editData.IngotsCount" />
+            <InputNumber id="ingotsCount" class="form-control" disabled placeholder="количество заготовок" @bind-Value="@_editData.IngotsCount" />
         </div>
         <div class="form-group col-md-auto">
             <label for="ingotLength">Длина заготовки (мм)</label>
@@ -69,16 +69,23 @@
     </div>
     <div class="form-row">
         <div class="form-group col-md-1">
+            <label for="">Профиль</label>
+            <InputSelect id="productProfile" class="form-control" @bind-Value="@_editData.ProductProfile">
+                <option value="№">№</option>
+                <option value="Ø">Ø</option>
+            </InputSelect>
+        </div>
+        <div class="form-group col-md-1">
             <label for="diameter">Диаметр</label>
-            <InputNumber id="diameter" class="form-control" placeholder="диаметр" @bind-Value="@_editData.Diameter" />
+            <InputNumber id="diameter" class="form-control" placeholder="диаметр" @bind-Value="@_editData.Diameter"/>
         </div>
         <div class="form-group col-md-1">
             <label for="shift">Бригада</label>
-            <InputText id="shift" class="form-control" placeholder="бригада" @bind-Value="@_editData.Shift" />
+            <InputText id="shift" class="form-control" placeholder="бригада" @bind-Value="@_editData.Shift"/>
         </div>
         <div class="form-group col-md-1">
-            <label for="class">Класс</label>
-            <InputSelect id="gost" class="form-control" @bind-Value="@_editData.IngotClass">
+            <label for="classForm">Класс</label>
+            <InputSelect id="classForm" class="form-control" @bind-Value="@_editData.IngotClass">
                 @foreach (string item in _classes)
                 {
                     <option value="@item">@item</option>
