--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -22,19 +22,19 @@
 
 <div id="blazor-error-ui">
     <environment include="Staging,Production">
-        An error has occurred. This application may no longer respond until reloaded.
+        Потеряно соединение с серверов. Для продолжения работы необходимо обновить страницу в браузере.
     </environment>
     <environment include="Development">
-        An unhandled exception has occurred. See browser dev tools for details.
+        На сервере возникла ошибка. Подробности смотри в инструментах разработчкика.
     </environment>
     <a href="" class="reload">Reload</a>
     <a class="dismiss">🗙</a>
 </div>
 
 <script src="_framework/blazor.server.js"></script>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+<script src="js/jquery-3.5.1.min.js"></script>
+<script src="js/popper-1.16.1.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 
 <script src="js/js_utils.js"></script>
 </body>
