--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -23,10 +23,15 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="viewCoils">
+            <NavLink class="nav-link" href="http://10.23.192.41/" target="_blank">
                 <span class="oi oi-spreadsheet" aria-hidden="true"></span> Список бунтов 
             </NavLink>
         </li>
+        @* <li class="nav-item px-3">
+            <NavLink class="nav-link" href="viewCoils">
+                <span class="oi oi-spreadsheet" aria-hidden="true"></span> Список бунтов 
+            </NavLink>
+        </li> *@
     </ul>
 </div>
 
